possible solution to whitespace leakage issue

--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -39,6 +39,10 @@ li {
   margin: 0;
   padding: 0; }
 
+html, body {
+  width: 100%;
+  height: 100%; }
+
 body {
   font-family: "Proxima Nova", Helvetica, Arial, sans-serif; }
   body nav {
