--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -77,6 +77,11 @@ li {
 	padding:0;
 }
 
+html, body {
+    width: 100%;
+    height: 100%;
+}
+
 body {
 	font-family: $mainfont;
 
